--- a/I.css
+++ b/I.css
@@ -14,74 +14,65 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
     width: 1000px;
     height: 600px;
     background: white;
     box-shadow: 0 30px 50px rgba(0, 0, 0, 0.2);
 }
 
-.container .slider .item {
-    width: 200px;
-    height: 300px;
+.slider {
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
+
+.slider .item {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
     border-radius: 20px;
-
     box-shadow: 0 30px 50px grey;
-    background-position: 50% 50%;
-    background-size:cover;
-    display: inline-block;
+    background-position: center;
+    background-size: cover;
     transition: 0.5s;
 }
 
-.slider .item:nth-child(1),
-.slider .item:nth-child(2) {
-    top: 0;
+.slider .item:nth-child(1) {
     left: 0;
-    transform: translate(0, 0);
-    border-radius: 0;
     width: 100%;
     height: 100%;
+    border-radius: 0;
+}
+
+.slider .item:nth-child(2) {
+    left: 70%;
+    width: 180px;
+    height: 250px;
 }
 
 .slider .item:nth-child(3) {
-    left: 50%;
+    left: 85%;
+    width: 150px;
+    height: 220px;
 }
 
-.slider .item:nth-child(4) {
-    left: calc(50% + 220px);
-}
-
-.slider .item:nth-child(5) {
-    left: calc(50% + 440px);
-}
-
-.slider .item:nth-child(n+6) {
-    left: calc(50% + 660px);
+.slider .item:nth-child(n+4) {
+    left: 100%;
     opacity: 0;
 }
 
-.item .content {
+.content {
     position: absolute;
     top: 50%;
-    left: 100px;
+    left: 50px;
     width: 300px;
     text-align: left;
-    color: #eee;
-    transform: translate(0, -50%);
+    transform: translateY(-50%);
     font-family: system-ui;
     opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    transition: opacity 0.5s;
 }
-
-.slider .item:nth-child(2) .content{
-  opacity:1;
-  visibility: visible;
-}
-
+/* changing */
 .content .title{
     font-size: 40px;
     text-transform:uppercase;
@@ -89,7 +80,6 @@ body {
     opacity:1;
     animation: animate 1s ease-in-out 1 forwards;
 }
-
 .content .description{
     margin-top:10px;
     margin-bottom:20px;
@@ -125,105 +115,67 @@ body {
     }
 }
 
-.button{
-    width:100%;
-    text-align:center;
-    position:absolute;
-    bottom:20px;
-    
+.slider .item:nth-child(1) .content {
+    opacity: 1;
 }
 
-.button button{
-    width:45px;
+
+.button {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+}
+
+.button button {
+    width: 45px;
     height: 35px;
     border-radius: 8px;
     cursor: pointer;
-    margin:0px 5px;
+    margin: 0 5px;
     border: 1px solid #333;
     transition: 0.3s;
-    opacity:0.6;
+    opacity: 0.6;
 }
 
-.button button:hover{
-    opacity:0.9;
+.button button:hover {
+    opacity: 0.9;
 }
 
-.fullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.fullscreen img {
-    max-width: 90%;
-    max-height: 90%;
-    object-fit: contain;
-    border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(255, 255, 255, 0.2);
-    cursor: pointer;
-}
-
-/* Ensure responsiveness */
 @media screen and (max-width: 768px) {
     .container {
         width: 90%;
         height: 400px;
     }
 
-    .container .slider .item {
-        width: 150px;
-        height: 220px;
+    .slider .item:nth-child(2) {
+        left: 65%;
+        width: 140px;
+        height: 200px;
     }
 
     .slider .item:nth-child(3) {
-        left: 40%;
+        left: 80%;
+        width: 120px;
+        height: 180px;
     }
-
-    .slider .item:nth-child(4) {
-        left: calc(40% + 170px);
-    }
-
-    .slider .item:nth-child(5) {
-        left: calc(40% + 340px);
-    }
-
-    .slider .item:nth-child(n+6) {
-        left: calc(40% + 510px);
-        opacity: 0;
-    }
-
     .item .content {
-        left: 20px;
-        width: 90%;
+        top:38%;
+        left: 10px;
+        width: 60%;
     }
 
     .content .title {
-        font-size: 24px;
+        font-size: 23px;
     }
 
     .content .description {
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .content button {
-        padding: 8px 16px;
-        font-size: 14px;
-    }
-
-    .button {
-        bottom: 10px;
-    }
-
-    .button button {
-        width: 35px;
-        height: 30px;
+        padding: 6px 12px;
+        font-size: 12px;
     }
 }
 
