--- a/I.css
+++ b/I.css
@@ -148,8 +148,11 @@ body {
     .container {
         width: 90%;
         height: 400px;
+        border-radius: 15px;
     }
-
+    .slider{
+        border-radius: 15px;
+    }
     .slider .item:nth-child(2) {
         left: 65%;
         width: 140px;
